--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg bg-black sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#scrollspyHeading1">
-                <img src="./Images/zENITH.IN__3_-removebg-preview.jpg" alt="Zenith" height="50" class="logo">
+                <img src="./images/zENITH.IN__3_-removebg-preview.jpg" alt="Zenith" height="50" class="logo">
             </a>
             <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
