--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 </div>
             </div>
             <div class="col-lg-4">
-                <div><a href="./images/Screenshot (13).png" target=”_blank”><img src="./Images/cinemaadee.png" alt=""
+                <div><a href="./images/Screenshot (13).png" target=”_blank”><img src="./images/cinemaadee.png" alt=""
                             width="400px" class="port"></a>
                 </div>
             </div>
